// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb agent-connection generator > should add RDS CA bundle to Dockerfile (A2A) 1`] = `
"FROM public.ecr.aws/docker/library/node:lts-jod

WORKDIR /app

RUN npm install @aws/aws-distro-opentelemetry-node-autoinstrumentation@0.7.0

COPY index.js /app

RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates && \\
    rm -rf /var/lib/apt/lists/* && \\
    curl -fsSL "https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem" \\
    -o /usr/local/share/ca-certificates/rds-bundle.crt && \\
    update-ca-certificates

EXPOSE 9000

CMD [ "node", "--require", "@aws/aws-distro-opentelemetry-node-autoinstrumentation/register", "index.js" ]
"
`;

exports[`ts#rdb agent-connection generator > should add RDS CA bundle to Dockerfile (HTTP) 1`] = `
"FROM public.ecr.aws/docker/library/node:lts-jod

WORKDIR /app

RUN npm install @aws/aws-distro-opentelemetry-node-autoinstrumentation@0.7.0

COPY index.js /app

RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates && \\
    rm -rf /var/lib/apt/lists/* && \\
    curl -fsSL "https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem" \\
    -o /usr/local/share/ca-certificates/rds-bundle.crt && \\
    update-ca-certificates

EXPOSE 8080

CMD [ "node", "--require", "@aws/aws-distro-opentelemetry-node-autoinstrumentation/register", "index.js" ]
"
`;

exports[`ts#rdb agent-connection generator > should add rdb dev dependency to the agent prefixed dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#agent",
        "name": "my-agent",
        "path": "src/my-agent",
        "protocol": "HTTP",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "my-agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb agent-connection generator > should be idempotent for A2A agent.ts injection 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb agent-connection generator > should be idempotent for Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/node:lts-jod

WORKDIR /app

RUN npm install @aws/aws-distro-opentelemetry-node-autoinstrumentation@0.7.0

COPY index.js /app

RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates && \\
    rm -rf /var/lib/apt/lists/* && \\
    curl -fsSL "https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem" \\
    -o /usr/local/share/ca-certificates/rds-bundle.crt && \\
    update-ca-certificates

EXPOSE 8080

CMD [ "node", "--require", "@aws/aws-distro-opentelemetry-node-autoinstrumentation/register", "index.js" ]
"
`;

exports[`ts#rdb agent-connection generator > should be idempotent for agent.ts injection 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb agent-connection generator > should fall back to agent-dev when no component name 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#agent",
        "name": "agent",
        "path": "src/agent",
        "protocol": "HTTP",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb agent-connection generator > should inject db into agent.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb agent-connection generator > should inject db into agent.ts for A2A 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb agent-connection generator > should support multiple rdb connections in agent.ts 1`] = `
"import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const mysqlDb = await getMysqlDb();
  mysqlDb.$on('error', console.error);
  const postgresDb = await getPostgresDb();
  postgresDb.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;
